fixed positioning bugs on safari

--- a/src/styles/main-menu.scss
+++ b/src/styles/main-menu.scss
@@ -13,6 +13,9 @@
 .body {
   z-index: 3;
   box-shadow: -10px 0px 20px -5px #555555;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
 }
 
 .openButton {
